dfr 1114 merge conflict resolutions